chore: read keycloak config directly from global env

--- a/.env.sample
+++ b/.env.sample
@@ -28,6 +28,8 @@ KEYCLOAK_PASSWORD=pass
 KEYCLOAK_PORT=9099
 KEYCLOAK_REALM=open-vre
 KEYCLOAK_DB_VOLUME=keycloak_data
+KEYCLOAK_CLIENT=open-vre
+KEYCLOAK_SECRET=01234-secret
 
 #MONGODB CONFIGURATION
 #Database settings for MongoDB
