--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,9 @@ services:
       context: ./front_end/
     image: front_end
     environment:
+      KEYCLOAK_CLIENT: ${KEYCLOAK_CLIENT}
+      KEYCLOAK_REALM: ${KEYCLOAK_REALM}
+      KEYCLOAK_SECRET: ${KEYCLOAK_SECRET}
       MONGODB_CREDENTIALS: ${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}
       MONGODB_SERVER: ${MONGO_SERVER}
       MONGODB_PORT: ${MONGO_PORT}
