--- a/front_end/openVRE/config/globals.inc.php.sample
+++ b/front_end/openVRE/config/globals.inc.php.sample
@@ -68,7 +68,7 @@ $GLOBALS['auth_required']          = False; // Forces login
 $GLOBALS['auth_credentials']       = __DIR__."/oauth2.conf"; // oauth2 client credentials
 $GLOBALS['authAdmin_credentials']  = __DIR__."/oauth2_admin.conf"; // oauth2 client credentials with admin privileges
 $GLOBALS['authServer']             = 'http://172.21.0.12:8080/auth'; // internal oauth2 server
-$GLOBALS['authRealm']              = 'open-vre'; // keycloak realm
+$GLOBALS['authRealm']              = getenv('KEYCLOAK_REALM'); // keycloak realm
 $GLOBALS['urlAuthorize' ]          = $GLOBALS['authServer'].'/realms/'.$GLOBALS['authRealm'].'/protocol/openid-connect/auth';     //get autorization_code
 $GLOBALS['urlAccessToken']         = $GLOBALS['authServer'].'/realms/'.$GLOBALS['authRealm'].'/protocol/openid-connect/token';    //get token
 $GLOBALS['urlResourceOwnerDetails']= $GLOBALS['authServer'].'/realms/'.$GLOBALS['authRealm'].'/protocol/openid-connect/userinfo'; //get user details
