--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 composer.lock
 front_end/openVRE/config/globals.inc.php
 front_end/openVRE/config/*.conf
+shared_data
 vault/config/public-key.pem
 vault/file/*
 vendor/
