chore: read keycloak admin and mail config from global env

--- a/.env.sample
+++ b/.env.sample
@@ -66,3 +66,8 @@ FRONTEND_HOSTNAME=front_end
 #These should match the IDs running the Docker containers
 UID=1000
 GID=1000
+
+#MAIL CONFIGURATION
+MAIL_HOST=mail
+MAIL_USER=mail
+MAIL_PASS=pass
