refactor: put network config in env file

--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,7 @@
 # FOR WINDOWS/WSL USE IP
 FQDN_HOST=localhost # or external FQDN
 FQDN_HOST_PROTOCOL=http
-NETWORK_NAME=net_vre
+NETWORK_NAME=open-vre-network
 
 
 #POSTGRES_CONFIGURATION
