feat: automate Vault initialization in dev mode and add user secrets structure in Vault
Now secrets follow the structure secrets/data/user_sub/secret_name

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ front_end/openVRE/config/*.conf
 shared_data
 vault/config/public-key.pem
 vault/file/*
+vault/config/jwt-user-policies.hcl
 vendor/
 volumes/
 *.crt
