feat: add Keycloak server url to env

--- a/.env.sample
+++ b/.env.sample
@@ -28,6 +28,7 @@ KEYCLOAK_REALM=open-vre
 KEYCLOAK_DB_VOLUME=keycloak_data
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234-secret
+KEYCLOAK_SERVER=https://keycloack_address.com
 
 #MONGODB CONFIGURATION
 #Database settings for MongoDB
