feat: set up mongodb

--- a/.env.sample
+++ b/.env.sample
@@ -35,11 +35,15 @@ KEYCLOAK_SERVER=https://keycloack_address.com
 MONGO_INITDB_USERNAME=user
 MONGO_INITDB_PASSWORD=user
 MONGO_SERVER=my-mongodb
-MONGO_DB=openVRE
+MONGO_MAIN_DB=openVRE
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
 MONGO_PORT=27017
 MONGODB_VOLUME=mongoDB_data
+MONGO_SSL_COMBINED_CAFILE=./mongodb/tls/mongodbCAcombined.pem # created via gen-certs.sh
+MONGO_SSL_KEYFILE=./mongodb/tls/mongodbCert.pem # created via gen-certs.sh
+MONGO_CA_COMBINED_FILE=/etc/ssl/certs/mongodbCAcombined.pem # internal paths that should not be changed
+MONGO_CERT_KEYFILE=/etc/ssl/certs/mongodbCert.pem # internal paths that should not be changed
 
 #VAULT CONFIGURATION
 #Secret managment settings for Vault
