--- a/.env.sample
+++ b/.env.sample
@@ -42,14 +42,18 @@ MONGO_PORT=27017
 MONGODB_VOLUME=mongoDB_data
 MONGO_SSL_COMBINED_CAFILE=./mongodb/tls/mongodbCAcombined.pem # created via gen-certs.sh
 MONGO_SSL_KEYFILE=./mongodb/tls/mongodbCert.pem # created via gen-certs.sh
-MONGO_CA_COMBINED_FILE=/etc/ssl/certs/mongodbCAcombined.pem # internal paths that should not be changed
-MONGO_CERT_KEYFILE=/etc/ssl/certs/mongodbCert.pem # internal paths that should not be changed
+MONGO_CA_COMBINED_FILE=/etc/ssl/certs/mongodbCAcombined.pem # internal path that should not be changed
+MONGO_CERT_KEYFILE=/etc/ssl/certs/mongodbCert.pem # internal path that should not be changed
 
 #VAULT CONFIGURATION
 #Secret managment settings for Vault
 VAULT_PORT=8089
 VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
 VAULT_ADDR=http://0.0.0.0:8200
+VAULT_SSL_PEM=./vault/config/tls/vault.crt # created via gen-certs.sh
+VAULT_SSL_KEY=./vault/config/tls/vault.key # created via gen-certs.sh
+VAULT_CERT_PEM=/etc/ssl/certs/vault.crt # internal path that should not be changed
+VAULT_CERT_KEY=/etc/ssl/certs/vault.key # internal path that should not be changed
 
 #DOCKER CONFIGURATION
 #Settings related to Docker
