refactor: rename mongo vars to use common naming
Prefix as Mongo instead and MongoDB

--- a/.env.sample
+++ b/.env.sample
@@ -34,11 +34,11 @@ KEYCLOAK_SECRET=01234-secret
 MONGO_INITDB_USERNAME=user
 MONGO_INITDB_PASSWORD=user
 MONGO_SERVER=my-mongodb
-MONGO_DB=openVRE
+MONGO_MAIN_DB=openVRE
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
 MONGO_PORT=27017
-MONGODB_VOLUME=mongoDB_data
+MONGO_VOLUME=mongo_data
 
 #VAULT CONFIGURATION
 #Secret managment settings for Vault
