refactor: front_end service server name

--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,13 @@
-#Global settings
-#Configuration applicable across multiple components
+# Global settings
+# Configuration applicable across multiple components
 
 # FOR WINDOWS/WSL USE IP
 FQDN_HOST=localhost # or external FQDN
-FQDN_HOST_PROTOCOL=http
 NETWORK_NAME=open-vre-network
 
 
-#POSTGRES_CONFIGURATION
-#Databse settings for PostgreSQL
+# POSTGRES_CONFIGURATION
+# Databse settings for PostgreSQL
 POSTGRES_PASSWORD=password
 POSTGRES_USER=keycloak
 POSTGRES_DB=keycloak
@@ -19,18 +18,15 @@ DB_USER=keycloak
 DB_SCHEMA=public
 DB_PASSWORD=password
 
-#KEYCLOAK CONFIGURATION
+# KEYCLOAK CONFIGURATION
 # Authentication and user managment settings for Keycloak
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=pass
 KEYCLOAK_PORT=9099
-KEYCLOAK_REALM=open-vre
 KEYCLOAK_DB_VOLUME=keycloak_data
-KEYCLOAK_CLIENT=open-vre
-KEYCLOAK_SECRET=01234-secret
 
-#MONGODB CONFIGURATION
-#Database settings for MongoDB
+# MONGODB CONFIGURATION
+# Database settings for MongoDB
 MONGO_INITDB_USERNAME=user
 MONGO_INITDB_PASSWORD=user
 MONGO_SERVER=my-mongodb
@@ -40,29 +36,29 @@ MONGO_INITDB_ROOT_PASSWORD=admin
 MONGO_PORT=27017
 MONGO_VOLUME=mongo_data
 
-#VAULT CONFIGURATION
-#Secret managment settings for Vault
+# VAULT CONFIGURATION
+# Secret managment settings for Vault
 VAULT_PORT=8089
 VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
 VAULT_ADDR=http://0.0.0.0:8200
 
-#DOCKER CONFIGURATION
-#Settings related to Docker
-#Ensure that the Docker group ID matches your system configuration
-#To find the Docker group ID: getent group docker
+# DOCKER CONFIGURATION
+# Settings related to Docker
+# Ensure that the Docker group ID matches your system configuration
+# To find the Docker group ID: getent group docker
 DOCKER_GROUP=455
 
-#FRONTEND CONFIGURATION
-#Front-end application settings
-FRONTEND_PORT=8088 #To be consistent with the $GLOBALS['SERVER']
+# FRONTEND CONFIGURATION
+# Front-end application settings
+FRONTEND_PORT=8088
 FRONTEND_HOSTNAME=front_end
-
-#User ID and group ID for the front-end
-#These should match the IDs running the Docker containers
-UID=1000
-GID=1000
-
-#MAIL CONFIGURATION
+KEYCLOAK_REALM=open-vre
+KEYCLOAK_CLIENT=open-vre
+KEYCLOAK_SECRET=01234-secret
 MAIL_HOST=mail
 MAIL_USER=mail
 MAIL_PASS=pass
+# User ID and group ID for the front-end
+# These should match the IDs running the Docker containers
+UID=1000
+GID=1000
