feat: add Keycloak server env var and regroup them by service

--- a/.env.sample
+++ b/.env.sample
@@ -24,6 +24,10 @@ KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=pass
 KEYCLOAK_PORT=9099
 KEYCLOAK_DB_VOLUME=keycloak_data
+KEYCLOAK_REALM=open-vre
+KEYCLOAK_CLIENT=open-vre
+KEYCLOAK_SECRET=01234-secret
+KEYCLOAK_SERVER=http://172.21.0.12:8080/auth # temporary hack for keycloak v15.0.2
 
 # MONGODB CONFIGURATION
 # Database settings for MongoDB
@@ -52,9 +56,6 @@ DOCKER_GROUP=455
 # Front-end application settings
 FRONTEND_PORT=8088
 FRONTEND_HOSTNAME=front_end
-KEYCLOAK_REALM=open-vre
-KEYCLOAK_CLIENT=open-vre
-KEYCLOAK_SECRET=01234-secret
 MAIL_HOST=mail
 MAIL_USER=mail
 MAIL_PASS=pass
