--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,8 +74,7 @@ services:
       KEYCLOAK_USER: ${KEYCLOAK_USER}
       KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
       PROXY_ADDRESS_FORWARDING: "false"
-      KEYCLOAK_FRONTEND_URL: "http://172.21.0.12:8080/auth" # temporary hack for this keycloak v15.0.2
-    #KEYCLOAK_FRONTEND_URL: http://${FQDN_HOST}/auth
+      KEYCLOAK_FRONTEND_URL: ${KEYCLOAK_SERVER}
     volumes:
       - ./keycloak/realms:/opt/jboss/keycloak/imports
     command:
@@ -101,6 +100,7 @@ services:
       KEYCLOAK_REALM: ${KEYCLOAK_REALM}
       KEYCLOAK_CLIENT: ${KEYCLOAK_CLIENT}
       KEYCLOAK_SECRET: ${KEYCLOAK_SECRET}
+      KEYCLOAK_SERVER: ${KEYCLOAK_SERVER}
       MAIL_HOST: ${MAIL_HOST}
       MAIL_USER: ${MAIL_USER}
       MAIL_PASS: ${MAIL_PASS}
