feat: setup frontend service

--- a/.env.sample
+++ b/.env.sample
@@ -24,8 +24,8 @@ DB_PASSWORD=password
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=pass
 KEYCLOAK_PORT=9099
-KEYCLOAK_REALM=open-vre
 KEYCLOAK_DB_VOLUME=keycloak_data
+KEYCLOAK_REALM=open-vre
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234-secret
 KEYCLOAK_SERVER=https://keycloack_address.com
@@ -42,8 +42,10 @@ MONGO_PORT=27017
 MONGODB_VOLUME=mongoDB_data
 MONGO_SSL_COMBINED_CAFILE=./mongodb/tls/mongodbCAcombined.pem # created via gen-certs.sh
 MONGO_SSL_KEYFILE=./mongodb/tls/mongodbCert.pem # created via gen-certs.sh
+MONGO_SSL_CAFILE=./mongodb/tls/mongodbCA.crt # created via gen-certs.sh
 MONGO_CA_COMBINED_FILE=/etc/ssl/certs/mongodbCAcombined.pem # internal path that should not be changed
 MONGO_CERT_KEYFILE=/etc/ssl/certs/mongodbCert.pem # internal path that should not be changed
+MONGO_CA_FILE=/etc/ssl/certs/mongodbCA.crt # internal path that should not be changed
 
 #VAULT CONFIGURATION
 #Secret managment settings for Vault
@@ -52,8 +54,10 @@ VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
 VAULT_ADDR=http://0.0.0.0:8200
 VAULT_SSL_PEM=./vault/config/tls/vault.crt # created via gen-certs.sh
 VAULT_SSL_KEY=./vault/config/tls/vault.key # created via gen-certs.sh
+VAULT_SSL_CAFILE=./vault/config/tls/ca.pem # created via gen-certs.sh
 VAULT_CERT_PEM=/etc/ssl/certs/vault.crt # internal path that should not be changed
 VAULT_CERT_KEY=/etc/ssl/certs/vault.key # internal path that should not be changed
+VAULT_CERT_CAFILE=/etc/ssl/certs/vault-ca.pem # internal path that should not be changed
 
 #DOCKER CONFIGURATION
 #Settings related to Docker
@@ -63,8 +67,12 @@ DOCKER_GROUP=455
 
 #FRONTEND CONFIGURATION
 #Front-end application settings
-FRONTEND_PORT=8088 #To be consistent with the $GLOBALS['SERVER']
+FRONTEND_PORT=8088
 FRONTEND_HOSTNAME=front_end
+FRONTEND_SSL_PEM=./front_end/openVRE/certs/openVRE.pem  # given by user
+FRONTEND_SSL_KEY=./front_end/openVRE/certs/openVRE.key  # given by user
+FRONTEND_CERT_PEM=/opt/docker/etc/httpd/ssl/openVRE.pem # internal path that should not be changed
+FRONTEND_CERT_KEY=/opt/docker/etc/httpd/ssl/openVRE.key # internal path that should not be changed
 
 #User ID and group ID for the front-end
 #These should match the IDs running the Docker containers
