--- a/front_end/openVRE/apache/server.conf
+++ b/front_end/openVRE/apache/server.conf
@@ -1,21 +1,26 @@
 <VirtualHost *:80>
-    ServerAdmin front_end
-    ServerName front_end
+   ServerName ${SERVER_NAME}
+   Redirect permanent / https://${SERVER_NAME}/
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerName ${SERVER_NAME}
     DocumentRoot /var/www/html/openVRE/public/
     DirectoryIndex index.php
+
+    SSLEngine on
+    SSLCertificateFile ${FRONTEND_CERT_PEM}
+    SSLCertificateKeyFile ${FRONTEND_CERT_KEY}
 
     <Directory "/var/www/html/openVRE/public/api">
         AllowOverride All
         Require all granted
     </Directory>
 
-    RewriteEngine On
-    RewriteRule ^/interactive-tool/([^/]+)/?(.*) http://$1:8090/$2 [P,L]
+    RewriteEngine on
+    RewriteRule ^/interactive-tool/([^/]+)/?(.*) https://$1:8090/$2 [P,L]
 
-    <Location /interactive-tool/cbioportal-webapp/>
-        RequestHeader set X-Forwarded-Prefix "/interactive-tool/cbioportal-webapp"
-    </Location>
+    ErrorLog  /vre-ssl-error.log
+    CustomLog /vre-ssl-access.log combined
 
-    ErrorLog  /vre-error.log
-    CustomLog /vre-access.log combined
 </VirtualHost>
