--- a/.env.sample
+++ b/.env.sample
@@ -52,6 +52,7 @@ MONGO_CA_FILE=/etc/ssl/certs/mongodbCA.crt # internal path that should not be ch
 VAULT_PORT=8089
 VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
 VAULT_ADDR=http://0.0.0.0:8200
+VAULT_DATA_VOLUME=vault_data
 VAULT_SSL_PEM=./vault/config/tls/vault.crt # created via gen-certs.sh
 VAULT_SSL_KEY=./vault/config/tls/vault.key # created via gen-certs.sh
 VAULT_SSL_CAFILE=./vault/config/tls/ca.pem # created via gen-certs.sh
