Set localhost as server name and use standart path for logs

--- a/front_end/openVRE/apache/server.conf
+++ b/front_end/openVRE/apache/server.conf
@@ -1,6 +1,5 @@
 <VirtualHost *:80>
-    ServerAdmin front_end
-    ServerName front_end
+    ServerName localhost
     DocumentRoot /var/www/html/openVRE/public/
     DirectoryIndex index.php
 
@@ -16,6 +15,6 @@
         RequestHeader set X-Forwarded-Prefix "/interactive-tool/cbioportal-webapp"
     </Location>
 
-    ErrorLog  /vre-error.log
-    CustomLog /vre-access.log combined
+    ErrorLog  /var/log/apache/vre-error.log
+    CustomLog /var/log/apache/vre.log combined
 </VirtualHost>
