refactor: simplify mongo config
Internal docker mongo server name and port are not meant no be changed

--- a/.env.sample
+++ b/.env.sample
@@ -31,10 +31,11 @@ KEYCLOAK_SERVER=http://172.21.0.12:8080/auth # temporary hack for keycloak v15.0
 
 # MONGODB CONFIGURATION
 # Database settings for MongoDB
+MONGO_SERVER=my-mongodb:27107
+MONGO_MAIN_DB=openVRE
 MONGO_INITDB_USERNAME=user
 MONGO_INITDB_PASSWORD=user
-MONGO_SERVER=my-mongodb
-MONGO_MAIN_DB=openVRE
+# Only required for local deployment
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
 MONGO_PORT=27017
