--- a/.env.sample
+++ b/.env.sample
@@ -43,9 +43,13 @@ MONGO_VOLUME=mongo_data
 
 # VAULT CONFIGURATION
 # Secret managment settings for Vault
-VAULT_PORT=8089
+VAULT_ADDR=http://vault-server:8200
+VAULT_API_VERSION=v1
+VAULT_ROLENAME=user-role
+VAULT_SECRET_PATH=secret/data/
+# Only required for local deployment
 VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
-VAULT_ADDR=http://0.0.0.0:8200
+VAULT_PORT=8089
 
 # DOCKER CONFIGURATION
 # Settings related to Docker
