--- a/front_end/openVRE/config/globals.inc.php.sample
+++ b/front_end/openVRE/config/globals.inc.php.sample
@@ -67,9 +67,9 @@ $GLOBALS['adminToken']             = $GLOBALS['authServer']."/realms/master/prot
 $GLOBALS['adminRealm']             = $GLOBALS['authServer']."/admin/realms/".$GLOBALS['authRealm']; // admin keycloak users
 
 // Vault integration and roles
-$GLOBALS['vaultUrl'] = 'http://vault-server:8200/v1';
-$GLOBALS['vaultRolename'] = 'user-role';
-$GLOBALS['secretPath'] = 'secret/data/';
+$GLOBALS['vaultUrl'] = getenv('VAULT_ADDR') . "/" . getenv('VAULT_API_VERSION');
+$GLOBALS['vaultRolename'] = getenv('VAULT_ROLENAME');
+$GLOBALS['secretPath'] = getenv('VAULT_SECRET_PATH');
 
 // EGA
 $GLOBALS['EGA_METADATA_TOKEN_ENDPOINT'] = 'https://idp.ega-archive.org/realms/EGA/protocol/openid-connect/token';
