feat: add tools folder
Currently only interactive tool docker compose files need to be here

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,6 +145,7 @@ services:
       - ./sge/configuration:/etc/gridengine/configuration:rprivate
       - ./sge/shared_scripts:/shared_scripts:rshared
       - ./shared_data:/shared_data:rshared
+      - ./tools/docker:/tools:rshared
     devices:
       - '/dev/fuse:/dev/fuse'
     cap_add:
