refactor: typo and comment on only locally used env variables

--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ NETWORK_NAME=open-vre-network
 
 
 # POSTGRES_CONFIGURATION
-# Databse settings for PostgreSQL
+# Database settings for PostgreSQL
 POSTGRES_PASSWORD=password
 POSTGRES_USER=keycloak
 POSTGRES_DB=keycloak
@@ -20,14 +20,15 @@ DB_PASSWORD=password
 
 # KEYCLOAK CONFIGURATION
 # Authentication and user managment settings for Keycloak
+KEYCLOAK_SERVER=http://172.21.0.12:8080/auth # temporary hack for keycloak v15.0.2
+KEYCLOAK_REALM=open-vre
+KEYCLOAK_CLIENT=open-vre
+KEYCLOAK_SECRET=01234-secret
+# Only required for local deployment
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=pass
 KEYCLOAK_PORT=9099
 KEYCLOAK_DB_VOLUME=keycloak_data
-KEYCLOAK_REALM=open-vre
-KEYCLOAK_CLIENT=open-vre
-KEYCLOAK_SECRET=01234-secret
-KEYCLOAK_SERVER=http://172.21.0.12:8080/auth # temporary hack for keycloak v15.0.2
 
 # MONGODB CONFIGURATION
 # Database settings for MongoDB
