--- a/.env.sample
+++ b/.env.sample
@@ -20,7 +20,7 @@ DB_PASSWORD=password
 
 # KEYCLOAK CONFIGURATION
 # Authentication and user managment settings for Keycloak
-KEYCLOAK_SERVER=http://172.21.0.12:8080/auth # temporary hack for keycloak v15.0.2
+KEYCLOAK_SERVER=https://keycloak:8080/auth
 KEYCLOAK_REALM=open-vre
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234-secret
@@ -50,7 +50,7 @@ MONGO_CA_FILE=/etc/ssl/certs/mongodbCA.crt # internal path that should not be ch
 
 # VAULT CONFIGURATION
 # Secret managment settings for Vault
-VAULT_ADDR=http://vault-server:8200
+VAULT_ADDR=https://vault-server:8200
 VAULT_API_VERSION=v1
 VAULT_ROLENAME=user-role
 VAULT_SECRET_PATH=secret/data/
