--- a/.env.sample
+++ b/.env.sample
@@ -41,12 +41,14 @@ MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
 MONGO_PORT=27017
 MONGO_VOLUME=mongo_data
-MONGO_SSL_COMBINED_CAFILE=./mongodb/tls/mongodbCAcombined.pem # created via gen-certs.sh
-MONGO_SSL_KEYFILE=./mongodb/tls/mongodbCert.pem # created via gen-certs.sh
-MONGO_SSL_CAFILE=./mongodb/tls/mongodbCA.crt # created via gen-certs.sh
-MONGO_CA_COMBINED_FILE=/etc/ssl/certs/mongodbCAcombined.pem # internal path that should not be changed
-MONGO_CERT_KEYFILE=/etc/ssl/certs/mongodbCert.pem # internal path that should not be changed
-MONGO_CA_FILE=/etc/ssl/certs/mongodbCA.crt # internal path that should not be changed
+# Certificate paths
+MONGO_SSL_COMBINED_CAFILE=./mongodb/tls/mongodbCAcombined.pem
+MONGO_SSL_KEYFILE=./mongodb/tls/mongodbCert.pem
+MONGO_SSL_CAFILE=./mongodb/tls/mongodbCA.crt
+# Internal certificate paths (do not change)
+MONGO_CA_COMBINED_FILE=/etc/ssl/certs/mongodbCAcombined.pem
+MONGO_CERT_KEYFILE=/etc/ssl/certs/mongodbCert.pem
+MONGO_CA_FILE=/etc/ssl/certs/mongodbCA.crt
 
 # VAULT CONFIGURATION
 # Secret managment settings for Vault
@@ -57,12 +59,14 @@ VAULT_SECRET_PATH=secret/data/
 # Only required for local deployment
 VAULT_PORT=8089
 VAULT_DATA_VOLUME=vault_data
-VAULT_SSL_PEM=./vault/config/tls/vault.crt # created via gen-certs.sh
-VAULT_SSL_KEY=./vault/config/tls/vault.key # created via gen-certs.sh
-VAULT_SSL_CAFILE=./vault/config/tls/ca.pem # created via gen-certs.sh
-VAULT_CERT_PEM=/etc/ssl/certs/vault.crt # internal path that should not be changed
-VAULT_CERT_KEY=/etc/ssl/certs/vault.key # internal path that should not be changed
-VAULT_CERT_CAFILE=/etc/ssl/certs/vault-ca.pem # internal path that should not be changed
+# Certificate paths
+VAULT_SSL_PEM=./vault/config/tls/vault.crt
+VAULT_SSL_KEY=./vault/config/tls/vault.key
+VAULT_SSL_CAFILE=./vault/config/tls/ca.pem
+# Internal certificate paths (do not change)
+VAULT_CERT_PEM=/etc/ssl/certs/vault.crt
+VAULT_CERT_KEY=/etc/ssl/certs/vault.key
+VAULT_CERT_CAFILE=/etc/ssl/certs/vault-ca.pem
 
 # DOCKER CONFIGURATION
 # Settings related to Docker
@@ -74,10 +78,12 @@ DOCKER_GROUP=455
 # Front-end application settings
 FRONTEND_PORT=8088
 FRONTEND_HOSTNAME=front_end
-FRONTEND_SSL_PEM=./front_end/openVRE/certs/openVRE.pem  # given by user
-FRONTEND_SSL_KEY=./front_end/openVRE/certs/openVRE.key  # given by user
-FRONTEND_CERT_PEM=/opt/docker/etc/httpd/ssl/openVRE.pem # internal path that should not be changed
-FRONTEND_CERT_KEY=/opt/docker/etc/httpd/ssl/openVRE.key # internal path that should not be changed
+# Certificate paths
+FRONTEND_SSL_PEM=./front_end/openVRE/certs/openVRE.pem
+FRONTEND_SSL_KEY=./front_end/openVRE/certs/openVRE.key
+# Internal certificate paths (do not change)
+FRONTEND_CERT_PEM=/opt/docker/etc/httpd/ssl/openVRE.pem
+FRONTEND_CERT_KEY=/opt/docker/etc/httpd/ssl/openVRE.key
 # MAIL CONFIGURATION
 MAIL_HOST=mail
 MAIL_USER=mail
