chore: use ssl instead of tls to homogenise naming

--- a/.env.sample
+++ b/.env.sample
@@ -42,9 +42,9 @@ MONGO_INITDB_ROOT_PASSWORD=admin
 MONGO_PORT=27017
 MONGO_VOLUME=mongo_data
 # Certificate paths
-MONGO_SSL_COMBINED_CAFILE=./mongodb/tls/mongodbCAcombined.pem
-MONGO_SSL_KEYFILE=./mongodb/tls/mongodbCert.pem
-MONGO_SSL_CAFILE=./mongodb/tls/mongodbCA.crt
+MONGO_SSL_COMBINED_CAFILE=./mongodb/ssl/mongodbCAcombined.pem
+MONGO_SSL_KEYFILE=./mongodb/ssl/mongodbCert.pem
+MONGO_SSL_CAFILE=./mongodb/ssl/mongodbCA.crt
 # Internal certificate paths (do not change)
 MONGO_CA_COMBINED_FILE=/etc/ssl/certs/mongodbCAcombined.pem
 MONGO_CERT_KEYFILE=/etc/ssl/certs/mongodbCert.pem
@@ -60,9 +60,9 @@ VAULT_SECRET_PATH=secret/data/
 VAULT_PORT=8089
 VAULT_DATA_VOLUME=vault_data
 # Certificate paths
-VAULT_SSL_PEM=./vault/config/tls/vault.crt
-VAULT_SSL_KEY=./vault/config/tls/vault.key
-VAULT_SSL_CAFILE=./vault/config/tls/ca.pem
+VAULT_SSL_PEM=./vault/config/ssl/vault.crt
+VAULT_SSL_KEY=./vault/config/ssl/vault.key
+VAULT_SSL_CAFILE=./vault/config/ssl/ca.pem
 # Internal certificate paths (do not change)
 VAULT_CERT_PEM=/etc/ssl/certs/vault.crt
 VAULT_CERT_KEY=/etc/ssl/certs/vault.key
