feat: set basic config for keycloak v26.4 on dev mode
Default "dev-file" database is used, so no need for postgres service in dev

--- a/.env.sample
+++ b/.env.sample
@@ -20,13 +20,13 @@ DB_PASSWORD=password
 
 # KEYCLOAK CONFIGURATION
 # Authentication and user managment settings for Keycloak
-KEYCLOAK_SERVER=http://172.21.0.12:8080/auth # temporary hack for keycloak v15.0.2
+KEYCLOAK_SERVER=http://keycloak:8080/auth
 KEYCLOAK_REALM=open-vre
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234-secret
 # Only required for local deployment
-KEYCLOAK_USER=admin
-KEYCLOAK_PASSWORD=pass
+KEYCLOAK_ADMIN_USER=admin
+KEYCLOAK_ADMIN_PASSWORD=pass
 KEYCLOAK_PORT=9099
 KEYCLOAK_DB_VOLUME=keycloak_data
 
