--- a/.env.sample
+++ b/.env.sample
@@ -8,7 +8,7 @@ NETWORK_NAME=open-vre-network
 
 # KEYCLOAK CONFIGURATION
 # Authentication and user managment settings for Keycloak
-KEYCLOAK_SERVER=http://keycloak:8080/auth
+KEYCLOAK_SERVER=http://172.21.0.12:8080
 KEYCLOAK_REALM=open-vre
 KEYCLOAK_CLIENT=open-vre
 KEYCLOAK_SECRET=01234-secret
